--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@types/node": "^22.5.4",
     "typescript": "^5.6.2",
     "vitest": "^2.0.5"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.13"
   }
 }
