--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,11 @@
      "plugin:vitest-globals/recommended"
   ],
   "rules": {
-    "no-useless-constructor": "off"
+    "no-useless-constructor": "off",
+    "prettier/prettier": [
+      "error",
+      { "endOfLine": "auto" }
+    ]
   },
   "env": {
     "vitest-globals/env": true
