--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,18 @@
 {
   "extends": [
     "@rocketseat/eslint-config/node",
-     "plugin:vitest-globals/recommended"
+    "plugin:vitest-globals/recommended"
   ],
   "rules": {
     "no-useless-constructor": "off",
     "prettier/prettier": [
       "error",
-      { "endOfLine": "auto" }
-    ]
+      {
+        "endOfLine": "auto"
+      }
+    ],
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/ban-types": "off"
   },
   "env": {
     "vitest-globals/env": true
