--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
       }
     ],
     "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/ban-types": "off"
+    "@typescript-eslint/ban-types": "off",
+    "no-new": "off"
   },
   "env": {
     "vitest-globals/env": true
